<resources>
    <string name="app_name">Application2</string>
    <string name="btn_first_name">Linear</string>
    <string name="btn_second_name">Grid</string>
    <string name="item_title">Item Title</string>
    <string name="song_title">I love cats</string>
    <string name="song_lyrics">meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow</string>
    <string name="hint_text">number</string>
    <string name="bs_first_btn_text">Add</string>
    <string name="bs_second_btn_text">Delete</string>
    <string name="bs_third_btn_text">Add \n one</string>
    <string name="bs_fourth_btn_text">Delete \n one</string>
    <string name="fab_text">Add Item</string>
    <string name="btn_third_name">Super puper grid</string>
    <string name="alert_dialog_title">Confirm the deletion</string>
    <string name="alert_dialog_message">Are you sure you want to delete this item?</string>
    <string name="alert_dialog_positive_button_text">Yes</string>
    <string name="alert_dialog_negative_button_text">No</string>
</resources>